# Duplica

./: LICENSE  NOTES.md  README.md  db.sqlite  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
duplica/: main.py  mssql.test.py
duplica/app/: models.py
duplica/app/pages/: router.py
duplica/app/static/css/: styles.css
duplica/app/static/js/: main.js
duplica/app/templates/: main.html  tasks.html
duplica/duplica-tfs/: client.py  server.py
