[tool.poetry]
name = "duplica"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12.6"
fastapi = "^0.108.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
celery = "^5.3.6"
redis = "^5.0.1"
apscheduler = "^3.10.4"