[tool.poetry]
name = "duplica"
version = "0.1.0"
description = ""
authors = ["quonaro@mail.ru"]
readme = "README.md"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12.6"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.31.0"}
celery = "^5.3.6"
redis = "^5.0.1"
apscheduler = "^3.10.4"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0.35"
streamlit = "^1.38.0"
pandas = "^2.2.3"
loguru = "^0.7.2"
jinja2 = "^3.1.4"
peewee = "^3.17.6"
